--- a/styles.css
+++ b/styles.css
@@ -154,15 +154,17 @@ Color palette with RBG values
 /* Hero Section(not responsive yet) */
 
 .main{
-background: #b6b48d;
-height: 80vh;
+height: auto;
+width: auto;
 display: flex;
 justify-content: center;
 align-content: center;
 }
 
-.main_container{    
-    background: #b6b48d;
+.main_container{
+    width: 100%;
+    height: 100%;    
+    background: #fff;
 }
 
 
@@ -171,32 +173,36 @@ align-content: center;
     justify-content: center;
     max-height: 1fr;
     max-width: 1fr;
-    background: #0e0d0d;
+    background: #fff;
 }
 
-/*
-.upper-main_container {
+
+.big{
+    margin: 10px 10px;
     align-self: center;
     justify-self: center;
-    background: #444343;
-    height: 40vh;
-    width: 80vh;
+    background: #4b4b4b;
+    height: 70vh;
+    width: 200vh;
 }
-*/
+
 
 .lower-main_container{
-    height: 80vh;
+    margin: 10px 10px;
+    min-height: 50vh;
+    max-width: 200vh;
     display: grid;
-    grid-template-rows: 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 10px;
-    justify-content: space-between;
+    justify-content: flex-start;
+    row-gap: 15px;
+    column-gap: 15px;
     background: #fff;
 }
 
 .item{
-    max-height: 200px;
+    max-height: 300px;
     width: 1fr;
-    background: #312424;
+    background: #4b4b4b;
 }
 
