--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ Color palette with RBG values
     
     margin: 0;
     padding: 0;
-    font-family: 'georgia', sans-serif;
+    font-family: 'Dancing Script', cursive;
 }
 
 p {
@@ -182,12 +182,21 @@ align-content: center;
 
 
 .big{
+    display: flex;
     margin: 10px 10px;
     align-self: center;
     justify-self: center;
-    background: #4b4b4b;
+    align-content: center;
+    justify-content: center;
+    /*background: rgb(234,221,202);*/
     height: 70vh;
     width: 200vh;
+}
+
+.salon{
+    position: relative;
+    width: 100%;
+    height: 100%;
 }
 
 
@@ -207,7 +216,7 @@ align-content: center;
 .item{
     max-height: 300px;
     width: 1fr;
-    background: #4b4b4b;
+    background: rgb(234,221,202);
 }
 
 .stylist{
@@ -234,7 +243,12 @@ align-content: center;
 .stylist-item{
     height: auto;
     width: auto;
-    background: #4b4b4b;
+    background: rgb(234,221,202);
+    text-align: center;
+}
+
+h1, h2, h3{
+    color: #70564e;
 }
 
 
@@ -267,6 +281,17 @@ img {
     height: auto;
 }
 
+/*trying to get the image to take up the entire size of the big*/
+
+
+.center{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+
+}
+
 
 /*About us section*/
 
@@ -287,8 +312,21 @@ img {
 
 .footer_container{
     padding: 15px;
+    background: #a4a08a;
 }
 
 .footer_content{
     padding: 15px;
+}
+
+
+#aboutus_img1{
+    padding: 10px;
+    float: left;
+}
+
+#stylist_img{
+    max-height: 80%;
+    padding: 10px;
+    float: left;
 }
