--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,19 @@ p {
     #mobile-menu.is-active .bar:nth-child(3){
         transform: translateY(-8px) rotate(-45deg);
     }
+    h1{
+        font-size: 16px;
+    }
+    p{
+        font-size: 10px;
+    }
+    .big{
+        
+    }
+    .salon{
+        max-height: 50%;
+        
+    }
 }
 
 
@@ -194,8 +207,6 @@ align-content: center;
 }
 
 .salon{
-    position: relative;
-    width: 100%;
     height: 100%;
 }
 
