--- a/styles.css
+++ b/styles.css
@@ -38,19 +38,8 @@ p {
     padding: 0 50px;
 }
 
-#navbar_logo{
-    background-color: #fff;
-    /*background-image: linear-gradient(to top, #95B8D1 0%, #8bb6d4 100%);*/
-    background-size: 100%;
-    -webkit-background-clip: text;
-    -moz-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -moz-background-clip: transparent;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    text-decoration: none;
-    font-size: 2rem;
+.navbar_logo{
+    padding: 5px;
 }
 
 .fa-seedling{
@@ -182,6 +171,9 @@ align-content: center;
     width: 100%;
     height: 100%;    
     background: #fff;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 
@@ -216,9 +208,8 @@ align-content: center;
     min-height: 50vh;
     max-width: 200vh;
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr;
     grid-template-columns: 1fr 1fr 1fr;
-    justify-content: flex-start;
     row-gap: 15px;
     column-gap: 15px;
     background: #fff;
@@ -314,6 +305,11 @@ img {
     justify-content: center;
 }
 
+#comingsoon_img1{
+    float: left;
+    padding: 15px;
+}
+
 .aboutus_container {
     padding: 20px;
 }
@@ -322,6 +318,7 @@ img {
 /*Footer section*/
 
 .footer_container{
+    margin: 0 30px ;
     padding: 15px;
     background: #a4a08a;
 }
@@ -330,10 +327,19 @@ img {
     padding: 15px;
 }
 
+.footer_links{
+    color: #fff;
+    padding: 15px;
+}
 
 #aboutus_img1{
     padding: 10px;
     float: left;
+}
+
+#aboutus_img2{
+    padding: 10px;
+    float: right;
 }
 
 #stylist_img{
@@ -341,3 +347,13 @@ img {
     padding: 10px;
     float: left;
 }
+
+.comingsoon_container {
+    margin: 10px;
+}
+
+#comingsoon_img1{
+    float: left;
+}
+
+
